# redirect4d-bench

./: .gitattributes  .gitignore  .gitmodules  LICENSE  LICENSE-DATA.md  README.md  environment.yml  pyproject.toml
configs/openai/: filter_prompt.txt
docs/: scale_up.md
metrics/camera_pose_metrics/: eval_camera_pose.py  eval_camera_pose_gt.py
metrics/object_metrics/: README.md
outputs/: README.md
reconstruction/redirect4d/: DiffSynth-Studio  batch_run_pipeline.py  download_checkpoints.sh  generative-models  requirements.txt  run_pipeline.py  vipe  vipe_batch_run.py
scripts/data/: download_original_videos.py  generate_original_masks_sam3.py  install_restricted_sources.py  link_reconstruction_assets.py  prepare_dataset_release.py  reconstruct_source_tracks.py  validate_dataset.py
scripts/dev/: check_environment.py  check_reconstruction_determinism.py
scripts/env/: check_all_envs.sh  create_all_envs.sh  create_env.sh  create_reconstruction_env.sh  create_sam3_env.sh  update_env.sh
scripts/evaluation/: check_eval_determinism.py  env_utils.py  evaluate_user_method.py  run_final_metrics_case.py  run_seeded_metric.py
scripts/filtering/: openai_case_filter.py
scripts/metrics/: extract_propagated_masks_sam3.py
scripts/models/: download_reconstruction_checkpoints.sh
scripts/pipeline/: process_custom_video.py  run_scale_up_case.py
scripts/pseudo_gt/: refine_target_masks_sam3.py
scripts/reconstruction/: generate_arc_trajectories.py  render_prepared_case.py  run_vipe_lyra_noopt_reconstruction.py  stage_reconstruction_inputs.py
(+74 files in other folders)
